2005-05-09  Carl Worth  <cworth@cworth.org>

	* src/cairo.h (cairo_current_target_surface): Fix deprecation
	macro to point to the right function, (thanks to John Ellson).

2005-05-09  Carl Worth  <cworth@cworth.org>

	* src/cairo-font.c: (_cairo_simple_font_face_create_font),
	(cairo_scaled_font_create), (_cairo_scaled_font_init):
	* src/cairo-ft-font.c: (_ft_scaled_font_create),
	(_cairo_ft_scaled_font_create), (_ft_font_face_create_font):
	* src/cairo-gstate.c: (_cairo_gstate_transform),
	(_cairo_gstate_set_matrix), (_cairo_gstate_set_font_matrix):
	* src/cairo-image-surface.c: (_cairo_image_surface_set_matrix):
	* src/cairo-matrix.c: (_cairo_matrix_get_affine),
	(cairo_matrix_transform_distance), (cairo_matrix_transform_point),
	(_cairo_matrix_transform_bounding_box),
	(_cairo_matrix_compute_determinant),
	(_cairo_matrix_compute_eigen_values),
	(_cairo_matrix_compute_scale_factors),
	(_cairo_matrix_is_integer_translation):
	* src/cairo-pattern.c: (cairo_pattern_set_matrix),
	(_cairo_pattern_transform):
	* src/cairo.c: (cairo_transform), (cairo_set_matrix),
	(cairo_set_font_matrix):
	* src/cairo.h:
	* src/cairoint.h: Push cairo_matrix_t const-correctness down
	through the entire implmentation, (expanding on preliminary work
	by Robert O'Callahan <rocallahan@novell.com>)

2005-05-09  Carl Worth  <cworth@cworth.org>

	* configure.in:
	* src/cairo-features.h.in: Change cairo-features again so that
	either #if or #ifdef will work to test any feature.

2005-05-07  Owen Taylor  <otaylor@redhat.com>

	* doc/public/language-bindings.xml doc/public/cairo-doc.xml
	doc/public/Makefile.am: Document suggested conventions and
	techniques for many aspects of creating a language binding 
	for Cairo.

2005-05-07  Owen Taylor  <otaylor@redhat.com>

	* doc/public/cairo-sections.txt: Update.

2005-05-07  Carl Worth  <cworth@cworth.org>

	* src/cairo.h (cairo_set_alpha): Point to both
	cairo_set_source_rgba and cairo_paint_with_alpha in deprecation of
	cairo_set_alpha.
